--- a/service.yaml
+++ b/service.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   ports:
     - protocol: TCP
-      port: 81
-      targetPort: 8081
+      port: 80
+      targetPort: 8080
   selector:
-    app: spanner-crud-status-poda
+    app: spanner-crud-status-pod
   type: LoadBalancer
